--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "core-js": "^3.15.1",
-    "hooper": "^0.3.4",
+    "keen-slider": "^5.5.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
