--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "core-js": "^3.15.1",
+    "@nuxt/content": "^1.15.1",
+    "core-js": "^3.23.3",
     "keen-slider": "^5.5.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.8"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/types": "^2.15.7",
+    "@babel/eslint-parser": "^7.18.2",
+    "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "eslint": "^7.29.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "sass": "^1.35.2",
-    "sass-loader": "10"
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
+    "eslint": "^8.19.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^10.1.1"
   }
 }
