--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "core-js": "^3.17.2",
+    "@nuxt/content": "^1.15.0",
+    "core-js": "^3.19.0",
     "keen-slider": "^5.5.1",
     "nuxt": "^2.15.8"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.4",
+    "@babel/eslint-parser": "^7.15.8",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/eslint-config-typescript": "^7.0.2",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.17.0",
-    "sass": "^1.39.0",
-    "sass-loader": "10"
+    "eslint": "^8.1.0",
+    "eslint-plugin-nuxt": "^3.0.0",
+    "eslint-plugin-vue": "^7.20.0",
+    "sass": "^1.43.3",
+    "sass-loader": "^10.1.1"
   }
 }
