--- a/package.json
+++ b/package.json
@@ -1,31 +1,18 @@
 {
-  "name": "koningsdaghuizen.nl",
-  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
-  },
-  "dependencies": {
-    "@nuxt/content": "^1.15.1",
-    "core-js": "^3.23.3",
-    "keen-slider": "^5.5.1",
-    "nuxt": "^2.15.8"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.2",
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/eslint-module": "^3.1.0",
-    "eslint": "^8.19.0",
-    "eslint-plugin-nuxt": "^3.2.0",
-    "eslint-plugin-vue": "^9.2.0",
-    "sass": "^1.53.0",
-    "sass-loader": "^10.1.1"
+    "@nuxt/content": "^2.1.1",
+    "nuxt": "3.0.0-rc.11"
+  },
+  "dependencies": {
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2"
   }
 }
