--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "3.0.0-rc.11"
   },
   "dependencies": {
+    "keen-slider": "^6.8.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2"
   }
