--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.1.1",
-    "nuxt": "3.0.0-rc.11"
+    "@nuxt/content": "^2.2.2",
+    "nuxt": "3.0.0"
   },
   "dependencies": {
     "keen-slider": "^6.8.2",
