--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.12.1",
-    "nuxt": "3.11.1"
+    "nuxt": "3.11.1",
+    "typescript": "^5.4.3",
+    "vue-tsc": "^1"
   },
   "dependencies": {
     "@nuxt/ui": "^2.14.2",
