--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-tsc": "^1"
   },
   "dependencies": {
+    "@iconify-json/mdi": "^1.1.64",
     "@nuxt/ui": "^2.14.2",
     "keen-slider": "^6.8.3",
     "sass": "^1.56.1",
