--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxt/content": "^2.12.1",
     "nuxt": "3.11.1",
+    "prettier": "3.2.5",
     "typescript": "^5.4.3",
     "vue-tsc": "^1"
   },
