--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Prettier
-        run: yarn prettier . --check
+        run: yarn prettier src/ --check
       - name: TypeScript
         run: yarn vue-tsc --noEmit
