--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "zod": "^3.22.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
