--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Prettier
         run: yarn prettier src/ --check
       - name: TypeScript
-        run: yarn vue-tsc --noEmit
+        run: npx nuxi typecheck
