--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.12.1",
-    "nuxt": "3.11.1",
-    "prettier": "3.2.5",
+    "nuxt": "^3.11.1",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.3",
-    "vue-tsc": "^1"
+    "vue-tsc": "^2"
   },
   "dependencies": {
     "@iconify-json/mdi": "^1.1.64",
