--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "playwright test ",
+    "test-update-screenshots": "playwright test --update-snapshots"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.2",
+    "@playwright/test": "^1.47.2",
+    "@types/node": "^22.7.4",
     "nuxt": "^3.11.1",
     "prettier": "^3.2.5",
     "typescript": "^5.6.2",
