--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "yarn"
+          cache-dependency-path: "yarn.lock"
       - name: Install dependencies
         run: yarn install
       - name: Prettier
