--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^22.7.4",
     "nuxt": "^3.11.1",
     "prettier": "^3.2.5",
+    "sass-embedded": "^1.79.4",
     "typescript": "^5.6.2",
     "vue-tsc": "^2"
   },
@@ -22,8 +23,6 @@
     "@iconify-json/mdi": "^1.2.0",
     "@nuxt/ui": "^2.18.6",
     "keen-slider": "^6.8.6",
-    "sass": "^1.79.4",
-    "sass-loader": "^16.0.2",
     "zod": "^3.23.8"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
