--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bookworm",
 	"updateContentCommand": "yarn install",
 	"postAttachCommand": "yarn dev",
+	"appPort": "3000",
 	"customizations": {
 		"vscode": {
 			"extensions": [
