--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
+    "@nuxtjs/i18n": "^8.5.5",
     "@playwright/test": "^1.48.1",
     "@types/node": "^22.7.7",
     "nuxt": "^3.11.1",
