--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,8 +6,14 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"Vue.volar"
+				"Vue.volar",
+				"ms-playwright.playwright"
 			]
+		}
+	},
+	"features": {
+		"docker-in-docker": {
+			"version": "latest"
 		}
 	}
 }
