--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,9 @@ updates:
       update-types:
         - "patch"
         - "minor"
+      exclude-patterns:
+        - "@playwright/*"
+    playwright:
+      applies-to: version-updates
+      patterns:
+        - "@playwright/*"
