Add playwright dependabot group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,7 @@ updates:
       update-types:
         - "patch"
         - "minor"
+    playwright:
+      applies-to: version-updates
+      patterns:
+        - "@playwright/*"
