--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Prettier
         run: yarn prettier src/ --check
       - name: TypeScript
-        run: yarn vue-tsc --noEmit
+        run: yarn check-types
   playwright:
     runs-on: ubuntu-latest
     container:
