--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "playwright test ",
-    "test-update-screenshots": "playwright test --update-snapshots"
+    "test-update-screenshots": "playwright test --update-snapshots",
+    "check-types": "nuxi typecheck"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
