--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
         run: yarn install
       - name: Prettier
         run: yarn prettier src/ --check
+      - name: ESLint
+        run: yarn lint
       - name: TypeScript
         run: yarn check-types
   playwright:
