--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
           cache-dependency-path: "yarn.lock"
       - name: Install dependencies
         run: yarn install
-      - name: Prettier
-        run: yarn prettier src/ --check
+      - name: ESLint
+        run: yarn lint
       - name: TypeScript
         run: yarn check-types
   playwright:
