--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "playwright test ",
     "test-update-screenshots": "playwright test --update-snapshots",
     "check-types": "nuxi typecheck"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
+    "@nuxt/eslint": "^0.7.4",
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.9.0",
+    "eslint": "^9.17.0",
     "nuxt": "^3.14.159",
-    "prettier": "^3.2.5",
     "sass-embedded": "^1.81.0",
     "typescript": "^5.6.3",
     "vue-tsc": "^2"
