--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@playwright/test": "^1.49.1",
     "eslint": "^9.17.0",
     "nuxt": "^3.14.159",
-    "sass-embedded": "^1.81.0",
+    "sass": "^1.83.0",
     "typescript": "^5.6.3",
     "vue-tsc": "^2"
   },
