--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/content": "^2.13.4",
     "@nuxt/eslint": "^0.7.5",
     "@playwright/test": "^1.51.1",
+    "@types/node": "^22.13.16",
     "eslint": "^9.23.0",
     "nuxt": "^3.15.3",
     "sass": "^1.86.0",
