Add --frozen-lockfile flag to yarn install commands

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,12 @@
 {
-	"name": "Node.js & TypeScript",
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
-	"updateContentCommand": "yarn install",
-	"postAttachCommand": "yarn dev",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"Vue.volar",
-				"ms-playwright.playwright"
-			]
-		}
-	},
-	"appPort": 3000
+  "name": "Node.js & TypeScript",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
+  "updateContentCommand": "yarn install --frozen-lockfile",
+  "postAttachCommand": "yarn dev",
+  "customizations": {
+    "vscode": {
+      "extensions": ["Vue.volar", "ms-playwright.playwright"]
+    }
+  },
+  "appPort": 3000
 }
