--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "yarn.lock"
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: ESLint
         run: yarn lint
       - name: TypeScript
@@ -28,7 +28,7 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "yarn.lock"
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: Build project
         run: yarn build
       - name: Start project
